解决中文换行

--- a/themes/next/source/css/_mist.styl
+++ b/themes/next/source/css/_mist.styl
@@ -9,7 +9,9 @@
 // --------------------------------------------------
 h2, h3, h4, h5, h6 { margin: 20px 0 10px; }
 
-p { margin: 10px 0; }
+p, { margin: 10px 0; text-indent: 2em;}
+
+
 
 a { border-bottom-color: $grey; }
 
