--- a/themes/next/source/css/_mist.styl
+++ b/themes/next/source/css/_mist.styl
@@ -9,7 +9,7 @@
 // --------------------------------------------------
 h2, h3, h4, h5, h6 { margin: 20px 0 10px; }
 
-p, { margin: 10px 0; text-indent: 2em;}
+p { margin: 10px 0; text-indent: 2em;}
 
 
 
